Date	Added
2008/01/06
	* Added job_knt to nomemo, no return & noteleport mapflags. [Samuray22]
2007/11/27
	* Rev. 11824 Added Battle field and Memorial dungeon maps. [L0ne_W0lf]
2007/11/18
	* 11758 Updated more map flags for Al De Baran's turbo Track. [L0ne_W0lf]
2007/11/12
	* hom_setting&0x2 now disables skill range checks for homunculus. [Skotlex]
2007/11/08
	* Removed the unneccessary @refreshonline command
2007/10/29
	* Removed petid command (not needed because commands understand names)
	* Removed *id2 commands (messy, useless and redundant)
	* Added missing @misceffect, @feelreset and #dropall/#storeall setting
	* AGAIN added conf entries for @whozeny, @kamic, @tonpc, @identify,
	  @adopt, @trade, @changelook, @send, @displayskill
	* Reverted atcommand conf (alphabetically-sorted = failure) [ultramage]

2007/10/26
	* Removed the config setting firewall_hits_on_undead setting. The code
	  handles this now using the delay defined in skill_unit_db. [Skotlex]
2007/10/23
	* Rev. 11559 Added Arunafeltz State WoE maps. [L0ne_W0lf]
2007/10/22
	* Rev. 11551 Fixed nopenalty entries for Turbo Track maps. [L0ne_W0lf]
	* Rev. 11546 Added Turbo Track map flags. [L0ne_W0lf]
	* Removed the mail_server_enable setting as it's not required. [Zephyrus]
	* Removed the mail_server database settings from interconf.
	  Now maildb is an integral part of the mainDB. [Zephyrus]
2007/10/13
	* Renamed the config default_skill_delay to default_walk_delay as that is
	  the only thing it does now.
2007/10/11
	* Renamed import folder to import-tmpl [Playtester]
	- new server owners please rename/copy it to import to use it
	- this was done so devs can test their changes easier
	* Removed nomemo and noteleport mapflags from Veins [Playtester]
2007/09/24
	* Added log_chat's '1 - log everything' (revert from r10850) [ultramage]
	- don't forget to adjust your config file ... again.
2007/09/18
	* Rev. 11241 Added new maps to maps_athena.conf, and corresponding mapflags. [L0ne_W0lf]